k8s/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../RhythmFlow/docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: search
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: search
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ../RhythmFlow/docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: search
    spec:
      containers:
        - env:
            - name: ALGOLIA_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: ALGOLIA_API_KEY
                  name: search-env
            - name: ALGOLIA_APP_ID
              valueFrom:
                configMapKeyRef:
                  key: ALGOLIA_APP_ID
                  name: search-env
            - name: SPRING_PROFILES_ACTIVE
              value: docker
          image: scarletbobcat/search:latest
          name: search
          resources:
            limits:
              cpu: "800m"
              memory: "600Mi"
            requests:
              cpu: "200m"
              memory: "400Mi"
          livenessProbe:
            httpGet:
              path: /search/health
              port: 7070
            initialDelaySeconds: 90
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /search/health
              port: 7070
            initialDelaySeconds: 60
            periodSeconds: 10
          ports:
            - containerPort: 7070
              protocol: TCP
      restartPolicy: Always
