k8s/logging-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ../RhythmFlow/docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: logging
  name: logging
spec:
  ports:
    - name: "6060"
      port: 6060
      targetPort: 6060
  selector:
    io.kompose.service: logging
